objects/Level_One_Level_Two__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Product Configuration for PureConnect Cloud</description>
    <fields>
        <fullName>Level_One__c</fullName>
        <label>Level One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Two__c</fullName>
        <label>Level Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <label>Offering Type</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Level One Level Two</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Offering_Type__c</columns>
        <columns>Level_One__c</columns>
        <columns>Level_Two__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>